fix positive and negative mark show issue on mobile

--- a/client/src/pages/Quiz/Quiz.module.css
+++ b/client/src/pages/Quiz/Quiz.module.css
@@ -285,4 +285,7 @@
   .sideUpper {
     font-size: 0.7em;
   }
+  .sub-header > .marks {
+    display: none;
+  }
 }
